# eatf-verifier

./: .editorconfig  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  LICENSE  README.md  SECURITY.md  codemeta.json
cli/: README.md
cli/eatf-inspect/: README.md  package-lock.json  package.json
cli/eatf-sign/: README.md  package-lock.json  package.json
cli/eatf-verify/: README.md  package-lock.json  package.json
docs/: aep-format.md
examples/: README.md
examples/01-minimal-sign-and-verify/: README.md
examples/02-with-rfc3161-timestamp/: README.md
examples/03-batch-verification/: README.md
examples/04-private-ca-setup/: README.md
examples/05-bkt-edu-demo/: README.md  bkt-replay.py  demo-bkt-session.py  tamper.py
lib/: README.md  package-lock.json  package.json
lib-python/: README.md  pyproject.toml
lib-python/eatf_verifier/: __init__.py  canonical.py  cli.py  hash.py  mldsa.py  overt.py  rsa.py  tsa.py  tsa_trust_list.py  verifier.py
lib-python/tests/: test_conformance.py  test_trust_list.py  test_tsa_trust.py
lib/src/: browser.ts  canonical.ts  hash.ts  index.ts  mldsa.ts  rsa.ts  signer.ts  tsa-trust-list.ts  tsa.ts  verifier.ts
lib/test/: overt-fixtures.test.ts  tsa-trust-list.test.ts  tsa.test.ts
schemas/: README.md  aep-v1.schema.json  overt-receipt-v1.schema.json
sdks/eatf-verifier-ts/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
sdks/eatf-verifier-ts/src/: browser.ts  canonical.ts  hash.ts  index.ts  mldsa.ts  rsa.ts  (+4 more)
test-vectors/: README.md
test-vectors/invalid/: README.md
test-vectors/keys/: README.md  dev-rsa-4096.key  dev-rsa-4096.pem
test-vectors/valid/: README.md
(+33 files in other folders)
