[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eatf-verifier"
version = "0.2.1"
description = "Offline Python verifier for EATF .aep evidence packages. Fresh port of the TypeScript reference; same conformance contract; no managed-service surface."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "Tyche Institute Contributors", email = "dev@tyche.institute" }]
keywords = ["eatf", "verifier", "aep", "offline", "ai-act", "evidence", "post-quantum"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security :: Cryptography",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "cryptography>=42",
  "asn1crypto>=1.5",
]

[project.optional-dependencies]
pqc = ["oqs>=0.10"]
dev = ["pytest>=7", "ruff>=0.4"]

[project.scripts]
eatf-verify-py = "eatf_verifier.cli:main"

[project.urls]
homepage = "https://github.com/tyche-institute/eatf/tree/main/lib-python"
repository = "https://github.com/tyche-institute/eatf"
issues = "https://github.com/tyche-institute/eatf/issues"

[tool.setuptools.packages.find]
include = ["eatf_verifier*"]
exclude = ["tests*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
extend-select = ["E", "F", "I", "B"]
